# KalenderApp-C

./: CMakeLists.txt  README.md
without warnings/: app.c  aufgabe1.c  myDateFunctions.c  myDateFunctions.h  prak5.c  prak5.h  stundenplan.c  stundenplan.h  termine.txt
